# agent-chain

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo_pipeline.py
src/agent_chain/: __init__.py  agent.py  async_agent.py  async_consensus.py  async_pipeline.py  block.py  branch_pipeline.py  consensus.py  events.py  function_agent.py  ledger.py  merkle.py  pipeline.py  utils.py
src/agent_chain/llm/: __init__.py  anthropic.py  async_anthropic.py  async_base.py  async_openai.py  base.py  ollama.py  openai.py
tests/: test_async_pipeline.py  test_block.py  test_branch_pipeline.py  test_bugfixes.py  test_consensus.py  test_events.py  test_function_agent.py  test_ledger.py  test_merkle.py  test_pipeline.py
